--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
+    <meta http-equiv="refresh" content=".5">
     <title>Work Day Scheduler</title>
   </head>
 
@@ -36,12 +37,15 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-      <p id="1a" class="lead"></p>
+      <p id="currentLocalTime" class="lead"></p>
+      
+
 
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      
+      <div id="12am"></div>
+
     </div>
 
     <script src="./script.js"></script>
